@@ -1,3 +1,9 @@
+2006-03-05  Alexey Shchepin  <alexey@sevcom.net>
+
+	* src/ejabberd_c2s.erl: Bugfix
+
+	* src/ejabberd_auth_odbc.erl: Bugfix
+
 2006-03-04  Mickael Remond  <mickael.remond@process-one.net>
 
 	* src/ejabberd_logger_h.erl: reopen-log function now rename the log
